Refactored output source typeing to keep it simple, stupid.
Basic implementation of core usecases in SBT plugin.

Migration are mocked with full responses in 2 steps.

Sbt version bump.